# bspguy-angelscript-implementation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
scripts/: spiral.as  vec3_demo.as
src/: globals.cpp  globals.h  main.cpp
src/bsp/: Bsp.cpp  Bsp.h  BspMerger.cpp  BspMerger.h  Entity.cpp  Entity.h  Keyvalue.cpp  Wad.cpp  Wad.h  bsplimits.h  bsptypes.h  colors.h
src/data/icons/: app.h  app2.h  leaf.h
src/editor/: AppSettings.cpp  AppSettings.h  BaseRenderer.cpp  BaseRenderer.h  BspRenderer.cpp  BspRenderer.h  Command.cpp  Command.h  Fgd.cpp  Fgd.h  Gui.cpp  Gui.h  MdlRenderer.cpp  MdlRenderer.h  PointEntRenderer.cpp  PointEntRenderer.h  Renderer.cpp  Renderer.h  ScriptManager.cpp  ScriptManager.h  SprRenderer.cpp  SprRenderer.h  TextureAtlas.cpp  TextureAtlas.h
src/gl/: Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  VertexBuffer.cpp  VertexBuffer.h  primitives.h  shaders.cpp  shaders.h
src/nav/: LeafNavMesh.cpp  LeafNavMesh.h  LeafNavMeshGenerator.cpp  LeafNavMeshGenerator.h  NavMeshGenerator.cpp  NavMeshGenerator.h  PolyOctree.cpp  PolyOctree.h
src/qtools/: vis.cpp
src/shaders/: bsp_3dtex_frag.glsl  bsp_arraytex_frag.glsl  bsp_legacy_frag.glsl  bsp_vert.glsl  cvert_frag.glsl  cvert_vert.glsl  mdl_legacy_vert.glsl  mdl_vert.glsl  spr_frag.glsl  spr_vert.glsl  tvert_frag.glsl  tvert_vert.glsl  vec3_depth_frag.glsl  vec3_frag.glsl  vec3_vert.glsl
src/util/: Polygon3D.cpp  bmp.cpp  bmp.h  mstream.cpp  mstream.h  quant.cpp  quant.h  util.cpp  util.h
